fix(RegisterPageStep1.tsx): replace margin with flex gap, move button into form

--- a/src/pages/RegisterPages/RegisterPageStep1/RegisterPageStep1.module.css
+++ b/src/pages/RegisterPages/RegisterPageStep1/RegisterPageStep1.module.css
@@ -17,10 +17,17 @@
 .register {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 30px;
   border-radius: 12px;
   background-color: var(--clr-ui-surface);
-  padding: 125px 60px;
+  padding: 60px;
+}
+
+.registerForm {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .loginWith {
